--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,12 @@
   "hints": {
     "axe/aria": "off",
     "typescript-config/consistent-casing": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ]
   }
 }
